--- a/pos_backend/.env
+++ b/pos_backend/.env
@@ -1,3 +1,4 @@
 PORT=8000
-MONGODB_URI=mongodb+srv://jayanthihotel:janith123@cluster0.gnjj0q1.mongodb.net/hotel?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI=mongodb+srv://jayanthihotel:janith123@cluster0.gnjj0q1.mongodb.net/POS_System?retryWrites=true&w=majority&appName=Cluster0
 NODE_ENV=development
+ACCESS_TOKEN_SECRET=GVp9xp8RjtV7IWZ
