--- a/pos_backend/package.json
+++ b/pos_backend/package.json
@@ -21,6 +21,7 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
+    "node-cron": "^4.2.1",
     "pdf-to-printer": "^5.6.0",
     "pdfkit": "^0.17.1"
   },
