cron time update

--- a/pos_backend/vercel.json
+++ b/pos_backend/vercel.json
@@ -15,11 +15,11 @@
   "crons": [
     {
       "path": "/services/expenseCleanUpService.js",
-      "schedule": "0 0 * * *"
+      "schedule": "*/5 * * * *"
     },
     {
       "path": "/services/orderCleanupService.js",
-      "schedule": "0 1 * * *"
+      "schedule": "*/5 * * * *"
     }
   ]
 }
