--- a/pos_backend/vercel.json
+++ b/pos_backend/vercel.json
@@ -8,17 +8,13 @@
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.js"
+      "src": "/api/(.*)",
+      "dest": "/index.js"
     }
   ],
   "crons": [
     {
       "path": "/api/cron/expenseCleanUpService",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/cron/orderCleanupService",
       "schedule": "0 0 * * *"
     }
   ]
