--- a/pos_backend/vercel.json
+++ b/pos_backend/vercel.json
@@ -1,12 +1,20 @@
 {
   "version": 2,
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/(.*)",
+      "dest": "index.js"
+    }
+  ],
   "crons": [
     {
-      "path": "/api/cron/expenseCleanUpService",
-      "schedule": "0 0 * * *"
-    },
-    {
-      "path": "/api/cron/orderCleanupService",
+      "path": "/",
       "schedule": "0 0 * * *"
     }
   ]
