--- a/pos_backend/package.json
+++ b/pos_backend/package.json
@@ -24,7 +24,8 @@
     "mongoose": "^8.14.1",
     "node-cron": "^4.2.1",
     "pdf-to-printer": "^5.6.0",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "serverless-http": "^4.0.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
