--- a/pos_backend/package.json
+++ b/pos_backend/package.json
@@ -14,7 +14,6 @@
   "dependencies": {
     "bcryptjs": "^3.0.2",
     "body-parser": "^2.2.0",
-    "canvas": "^3.2.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
@@ -24,8 +23,7 @@
     "mongoose": "^8.14.1",
     "node-cron": "^4.2.1",
     "pdf-to-printer": "^5.6.0",
-    "pdfkit": "^0.17.1",
-    "serverless-http": "^4.0.0"
+    "pdfkit": "^0.17.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
