--- a/pos_frontend/package.json
+++ b/pos_frontend/package.json
@@ -13,6 +13,7 @@
     "@reduxjs/toolkit": "^2.7.0",
     "@tailwindcss/vite": "^4.1.5",
     "@tanstack/react-query": "^5.75.5",
+    "@vercel/speed-insights": "^1.3.1",
     "axios": "^1.9.0",
     "framer-motion": "^12.9.2",
     "notistack": "^3.0.2",
